fixing react date picker style nowrap

--- a/app/_styles/globals.css
+++ b/app/_styles/globals.css
@@ -84,3 +84,12 @@
   --rdp-background-color: theme("colors.accent.600") !important;
   margin: 0 !important;
 }
+
+.rdp-months {
+  flex-wrap: nowrap !important;
+  gap: 1rem !important;
+}
+
+.rdp-month_caption {
+  margin-left: 1rem;
+}
